--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,5 @@
-<h2>My first component</h2>
+<h1>{{title}}</h1>
+<button (click)="changeText()">Change</button>
+<ul>
+  <li ngFor="let todo of todos">{{todos}}</li>
+</ul>
