--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,8 +3,8 @@
 <ul>
   <li *ngFor="let todo of todos">
     {{todo.id}} {{todo.title}}
-    <button *ngIf="!todo.done">Finish</button>
-    <button *ngIf="todo.done">Repeat</button>
+    <button *ngIf="!todo.done" (click)="markAsDone(todo)">Finish</button>
+    <button *ngIf="todo.done" (click)="markAsUndone(todo)">Repeat</button>
     <button (click)="remove(todo)">Remove</button>
   </li>
 </ul>
