--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,26 +1,33 @@
-<h1>{{title}}</h1>
-<button (click)="changeText()">Change</button>
-<ul>
-  <p>
-    <small *ngIf="todos.length == 0">No tasks today </small>
-  </p>
+<h1 class="title animated jackInTheBox">Lista de Tarefas</h1>
+<ul class="animated flipInX" *ngIf="mode=='list'">
+  <p class="text-center" *ngIf="todos.length==0"><small>Você não tem nenhuma tarefa hoje!</small></p>
   <li *ngFor="let todo of todos">
-    {{todo.id}} {{todo.title}}
-    <button *ngIf="!todo.done" (click)="markAsDone(todo)">Finish</button>
-    <button *ngIf="todo.done" (click)="markAsUndone(todo)">Repeat</button>
-    <button (click)="remove(todo)">Remove</button>
+    {{ todo.title }}
+    <button (click)="remove(todo)"><i class="far fa-trash-alt"></i></button>
+    <button *ngIf="!todo.done" (click)="markAsDone(todo)"><i class="far fa-check-circle"></i></button>
+    <button *ngIf="todo.done" (click)="markAsUndone(todo)"><i class="fas fa-check-circle"></i></button>
   </li>
 </ul>
 
-<form [formGroup]="form">
+<div id="modal" *ngIf="mode=='add'" class="animated flipInX">
+  <h1 class="text-center">Nova Tarefa</h1>
+  <form [formGroup]="form">
+    <input type="text" placeholder="Título da Tarefa" maxlength="60" formControlName="title"><br>
+    <small class="danger" *ngIf="form.controls.title.invalid && !form.controls.title.pristine">
+      Este campo deve conter entre 3 e 60caracteres<br>
+    </small>
+    <p class="text-center">
+      <button [disabled]="form.invalid" (click)="add()" class="button"><i class="far fa-save"></i> Salvar</button>
+    </p>
+  </form>
+  <br><br>
+</div>
 
-  <fieldset>
-
-    <label>Task: </label>
-    <input type="text" placeholder="Title of task" maxlength="60" formControlName="title">
-    <small *ngIf="form.controls.title.invalid && !form.controls.title.pristine">Range of the field (3 to 60)</small>
-    <button [disabled]="form.invalid" (click)="add()">Save</button>
-
-  </fieldset>
-
-</form>
+<button class="add-button animated fadeInUp button" (click)="changeMode('add')" *ngIf="mode=='list'">
+  <i class="fas fa-plus-circle"></i>
+  NOVA TAREFA
+</button>
+<button class="add-button animated fadeInUp button" (click)="changeMode('list')" *ngIf="mode=='add'">
+  <i class="fas fa-times"></i>
+  CANCELAR
+</button>
